# std_call_scan

./: .gitignore  BUILD.WIN64.ko.md  BUILD.ko.md  CMakeLists.txt  README.ko.md  README.md  scanner.cpp
ps/: build_scan_env.ps1
sh/: build_scan_env.sh  sc.ps1  sc.sh
